tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@unknown_top_field.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/unknown_top_field.txt
---
error: Field `unknown` is not defined
 --> unknown_top_field.txt:1:3
  |
1 | {{ unknown.username }}
  |    ^^^^^^^
